fix: allow url-link to adapt to the container, avoid unbreakable long words to overflow, underline links in text on hover, focus, active for better UX feedback

--- a/src/styles/Message.scss
+++ b/src/styles/Message.scss
@@ -377,12 +377,9 @@
       }
 
       p {
-        /* Make sure really long urls and words don't break out.
-        ** https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
-        overflow-wrap: break-word;
+        /* Make sure really long urls and words don't break out.*/
         word-wrap: break-word;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        word-break: break-word;
 
         /* Adds a hyphen where the word breaks, if supported (No Blink) */
         -ms-hyphens: auto;
@@ -554,10 +551,6 @@
   }
 
   &-url-link {
-    max-width: 150px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
   }
 
   &--inner {
@@ -753,7 +746,8 @@
       flex: initial;
       text-align: left;
       max-width: 460px;
-      word-break: break-all;
+      word-wrap: break-word;
+      word-break: break-word;
 
       &.str-chat__message-simple-text-inner--is-emoji {
         background: transparent;
@@ -771,6 +765,10 @@
         color: var(--primary-color);
         font-weight: var(--font-weight-bold);
         text-decoration: none;
+
+        &:active, &:focus, &:hover {
+          text-decoration: underline;
+        }
       }
 
       blockquote {
